--- a/App_LocalResources/ChangePassword.aspx.es.resx
+++ b/App_LocalResources/ChangePassword.aspx.es.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,30 +118,30 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Cambiar contraseña</value>
+    <value>Cambiar contraseÃƒÂ±a</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Confirmar contraseña</value>
+    <value>Confirmar contraseÃƒÂ±a</value>
   </data>
   <data name="tbNewPasswordResource1.Label" xml:space="preserve">
-    <value>Nueva contraseña</value>
+    <value>Nueva contraseÃƒÂ±a</value>
   </data>
   <data name="tbOldPasswordResource1.Label" xml:space="preserve">
-    <value>Contraseña anterior</value>
+    <value>ContraseÃƒÂ±a anterior</value>
   </data>
   <data name="tbUserNameResource1.Label" xml:space="preserve">
     <value>Nombre de usuario</value>
   </data>
   <data name="TEXT_STANDARD_CHANGE_PASSWORD_MSG" xml:space="preserve">
-    <value>&amp;lt;ul&amp;gt;&amp;lt;li&amp;gt;La contraseña debe contener 7 caracteres como mínimo.&amp;lt;/li&amp;gt;
-               &amp;lt;li&amp;gt;La contraseña debe contener caracteres alfabéticos y numéricos.&amp;lt;/li&amp;gt;
-               &amp;lt;li&amp;gt;Una vez cambiada la contraseña, no se podrá utilizar ninguna de las 4 anteriores.&amp;lt;/li&amp;gt;&amp;lt;/ul&amp;gt;</value>
+    <value>&amp;lt;ul&amp;gt;&amp;lt;li&amp;gt;La contraseÃƒÂ±a debe contener 7 caracteres como mÃƒÂ­nimo.&amp;lt;/li&amp;gt;
+               &amp;lt;li&amp;gt;La contraseÃƒÂ±a debe contener caracteres alfabÃƒÂ©ticos y numÃƒÂ©ricos.&amp;lt;/li&amp;gt;
+               &amp;lt;li&amp;gt;Una vez cambiada la contraseÃƒÂ±a, no se podrÃƒÂ¡ utilizar ninguna de las 4 anteriores.&amp;lt;/li&amp;gt;&amp;lt;/ul&amp;gt;</value>
   </data>
   <data name="TEXT_SU_NOTE" xml:space="preserve">
-    <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;NOTA:&amp;lt;/b&amp;gt;  Como superusuario, también deberá cambiar la entrada de ServerAccess en cada máquina y cifrarla.</value>
+    <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;NOTA:&amp;lt;/b&amp;gt;  Como superusuario, tambiÃƒÂ©n deberÃƒÂ¡ cambiar la entrada de ServerAccess en cada mÃƒÂ¡quina y cifrarla.</value>
   </data>
   <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
     <value>[ES]Incorrect old password</value>
