--- a/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
+++ b/Account/App_LocalResources/AccountLandingPage.aspx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+ï»¿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,72 +118,72 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AMOUNT_COL_HEADER_TEXT" xml:space="preserve">
-    <value>Montant</value>
+    <value>Amount</value>
   </data>
   <data name="DATE_COL_HEADER_TEXT" xml:space="preserve">
-    <value>d’exp.</value>
+    <value>Date</value>
   </data>
   <data name="IDENTIFIER_COL_HEADER_TEXT" xml:space="preserve">
-    <value>Identifiant</value>
+    <value>Identifier</value>
   </data>
   <data name="lblAccount360Title.Text" xml:space="preserve">
-    <value>Compte 360</value>
+    <value>Account 360</value>
   </data>
   <data name="TYPE_COL_HEADER_TEXT" xml:space="preserve">
     <value>Type</value>
   </data>
   <data name="billingActivityPanel.Text" xml:space="preserve">
-    <value>Activité de facturation</value>
+    <value>Billing Activity</value>
   </data>
   <data name="billingSummaryPanel.Text" xml:space="preserve">
-    <value>Factures et paiements</value>
+    <value>Invoices and Payments</value>
   </data>
   <data name="NO_INVOICES_TEXT" xml:space="preserve">
-    <value>Actuellement, ce compte ne contient pas de factures/paiements.</value>
+    <value>This account does not currently have any invoices or payments.</value>
   </data>
   <data name="NO_SUBSCRIPTIONS_TEXT" xml:space="preserve">
-    <value>Actuellement, ce compte ne contient pas d'abonnements.</value>
+    <value>This account currently does not have any subscriptions.</value>
   </data>
   <data name="SUBSCRIPTION_GRID_TITLE_TEXT" xml:space="preserve">
-    <value>Abonnements</value>
+    <value>Subscriptions</value>
   </data>
   <data name="SUBSCRIPTION_END_HEADER_TEXT" xml:space="preserve">
-    <value>Fin</value>
+    <value>End</value>
   </data>
   <data name="SUBSCRIPTION_OFFERING_NAME_HEADER_TEXT" xml:space="preserve">
-    <value>Abonnement</value>
+    <value>Subscription</value>
   </data>
   <data name="SUBSCRIPTION_START_HEADER_TEXT" xml:space="preserve">
-    <value>Début</value>
+    <value>Start</value>
   </data>
   <data name="SUBSCRIPTION_TYPE_HEADER_TEXT" xml:space="preserve">
     <value></value>
   </data>
   <data name="SUBSCRIPTION_ADD_BUTTON_TEXT" xml:space="preserve">
-    <value>Ajouter un abonnement</value>
+    <value>Add Subscription</value>
   </data>
   <data name="SUBSCRIPTION_ADD_BUTTON_TOOLTIP_TEXT" xml:space="preserve">
-    <value>Créer un nouvel abonnement pour une offre produit</value>
+    <value>Create a new subscription to a Product Offering</value>
   </data>
   <data name="SUBSCRIPTION_JOIN_BUTTON_TEXT" xml:space="preserve">
-    <value>Adhérer à un abonnement groupé</value>
+    <value>Join Group Subscription</value>
   </data>
   <data name="SUBSCRIPTION_JOIN_BUTTON_TOOLTIP_TEXT" xml:space="preserve">
-    <value>Ajouter ce compte en tant que membre d'un abonnement groupé existant</value>
+    <value>Add this account as a member of an existing Group Subscription</value>
   </data>
   <data name="SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
-    <value>Abonnement</value>
+    <value>Subscription</value>
   </data>
   <data name="GROUP_SUBSCRIPTION_TYPE_TEXT" xml:space="preserve">
-    <value>Abonnement groupé</value>
+    <value>Group Subscription</value>
   </data>
   <data name="INVOICE_ITEM_TEXT" xml:space="preserve">
-    <value>Facture</value>
+    <value>Invoice</value>
   </data>
   <data name="PAYMENT_ITEM_TEXT" xml:space="preserve">
-    <value>Paiement</value>
+    <value>Payment</value>
   </data>
   <data name="NO_DECISIONS_TEXT" xml:space="preserve">
-    <value>[FR]No Transactions Found for the Current Interval</value>
+    <value>No Transactions Found for the Current Interval</value>
   </data>
 </root>
