--- a/App_LocalResources/ChangePassword.aspx.de.resx
+++ b/App_LocalResources/ChangePassword.aspx.de.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>Kennwort ändern</value>
+    <value>Kennwort ÃƒÂ¤ndern</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>Kennwort bestätigen</value>
+    <value>Kennwort bestÃƒÂ¤tigen</value>
   </data>
   <data name="tbNewPasswordResource1.Label" xml:space="preserve">
     <value>Neues Kennwort</value>
@@ -138,10 +138,10 @@
   <data name="TEXT_STANDARD_CHANGE_PASSWORD_MSG" xml:space="preserve">
     <value>&amp;lt;ul&amp;gt;&amp;lt;li&amp;gt;Das Kennwort muss aus mindestens 7 Zeichen bestehen.&amp;lt;/li&amp;gt;
                &amp;lt;li&amp;gt;Das Kennwort muss sowohl Buchstaben als auch Zeichen enthalten.&amp;lt;/li&amp;gt;
-               &amp;lt;li&amp;gt;Ein neues Kennwort darf nicht mit einem der vier vorhergehenden Kennwörter identisch sein.&amp;lt;/li&amp;gt;&amp;lt;/ul&amp;gt;</value>
+               &amp;lt;li&amp;gt;Ein neues Kennwort darf nicht mit einem der vier vorhergehenden KennwÃƒÂ¶rter identisch sein.&amp;lt;/li&amp;gt;&amp;lt;/ul&amp;gt;</value>
   </data>
   <data name="TEXT_SU_NOTE" xml:space="preserve">
-    <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;HINWEIS:&amp;lt;/b&amp;gt; Als Superuser müssen Sie zudem den Eintrag in 'ServerAccess' auf jedem Rechner ändern und verschlüsseln.</value>
+    <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;HINWEIS:&amp;lt;/b&amp;gt; Als Superuser mÃƒÂ¼ssen Sie zudem den Eintrag in 'ServerAccess' auf jedem Rechner ÃƒÂ¤ndern und verschlÃƒÂ¼sseln.</value>
   </data>
   <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
     <value>[DE]Incorrect old password</value>
