--- a/App_LocalResources/ChangePassword.aspx.fr.resx
+++ b/App_LocalResources/ChangePassword.aspx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -133,15 +133,15 @@
     <value>Ancien mot de passe</value>
   </data>
   <data name="tbUserNameResource1.Label" xml:space="preserve">
-    <value>Nom d’utilisateur</value>
+    <value>Nom dÃ¢â‚¬â„¢utilisateur</value>
   </data>
   <data name="TEXT_STANDARD_CHANGE_PASSWORD_MSG" xml:space="preserve">
-    <value>&lt;ul&gt;&lt;li&gt;&amp;middot;Les mots de passe doivent contenir au minimum 7 caractères&lt;/li&gt;
-                             &lt;li&gt;&amp;middot;Les mots de passe doivent contenir des caractères alphabétiques et numériques&lt;/li&gt;
+    <value>&lt;ul&gt;&lt;li&gt;&amp;middot;Les mots de passe doivent contenir au minimum 7 caractÃƒÂ¨res&lt;/li&gt;
+                             &lt;li&gt;&amp;middot;Les mots de passe doivent contenir des caractÃƒÂ¨res alphabÃƒÂ©tiques et numÃƒÂ©riques&lt;/li&gt;
                              &lt;li&gt;&amp;middot;Pour la modification des mots de passe, vous ne pouvez pas utiliser les 4 derniers mots de passe&lt;/li&gt;&lt;/ul&gt;</value>
   </data>
   <data name="TEXT_SU_NOTE" xml:space="preserve">
-    <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;REMARQUE :&lt;/b&gt; En tant que Super utilisateur, vous devrez également modifier l’entrée dans ServerAccess sur chaque machine et la crypter.</value>
+    <value>&lt;br /&gt;&lt;br /&gt;&lt;b&gt;REMARQUE :&lt;/b&gt; En tant que Super utilisateur, vous devrez ÃƒÂ©galement modifier lÃ¢â‚¬â„¢entrÃƒÂ©e dans ServerAccess sur chaque machine et la crypter.</value>
   </data>
   <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
     <value>[FR]Incorrect old password</value>
