--- a/App_LocalResources/ChangePassword.aspx.ja.resx
+++ b/App_LocalResources/ChangePassword.aspx.ja.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,30 +118,30 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MTTitle1Resource1.Text" xml:space="preserve">
-    <value>パスワードの変更</value>
+    <value>Ã£Æ’â€˜Ã£â€šÂ¹Ã£Æ’Â¯Ã£Æ’Â¼Ã£Æ’â€°Ã£ÂÂ®Ã¥Â¤â€°Ã¦â€ºÂ´</value>
   </data>
   <data name="PageResource1.Title" xml:space="preserve">
     <value>MetraNet</value>
   </data>
   <data name="tbConfirmPasswordResource1.Label" xml:space="preserve">
-    <value>パスワードの確認</value>
+    <value>Ã£Æ’â€˜Ã£â€šÂ¹Ã£Æ’Â¯Ã£Æ’Â¼Ã£Æ’â€°Ã£ÂÂ®Ã§Â¢ÂºÃ¨ÂªÂ</value>
   </data>
   <data name="tbNewPasswordResource1.Label" xml:space="preserve">
-    <value>新しいパスワード</value>
+    <value>Ã¦â€“Â°Ã£Ââ€”Ã£Ââ€žÃ£Æ’â€˜Ã£â€šÂ¹Ã£Æ’Â¯Ã£Æ’Â¼Ã£Æ’â€°</value>
   </data>
   <data name="tbOldPasswordResource1.Label" xml:space="preserve">
-    <value>古いパスワード</value>
+    <value>Ã¥ÂÂ¤Ã£Ââ€žÃ£Æ’â€˜Ã£â€šÂ¹Ã£Æ’Â¯Ã£Æ’Â¼Ã£Æ’â€°</value>
   </data>
   <data name="tbUserNameResource1.Label" xml:space="preserve">
-    <value>ユーザ名</value>
+    <value>Ã£Æ’Â¦Ã£Æ’Â¼Ã£â€šÂ¶Ã¥ÂÂ</value>
   </data>
   <data name="TEXT_STANDARD_CHANGE_PASSWORD_MSG" xml:space="preserve">
-    <value>&amp;lt;ul&amp;gt;&amp;lt;li&amp;gt;パスワードは 7 文字以上の長さにする必要があります&amp;lt;/li&amp;gt;
-               &amp;lt;li&amp;gt;パスワードには英数字を含める必要があります&amp;lt;/li&amp;gt;
-               &amp;lt;li&amp;gt;パスワードを変更する場合、それまでに使用した 4 つのパスワードと同じにすることはできません&amp;lt;/li&amp;gt;&amp;lt;/ul&amp;gt;</value>
+    <value>&amp;lt;ul&amp;gt;&amp;lt;li&amp;gt;Ã£Æ’â€˜Ã£â€šÂ¹Ã£Æ’Â¯Ã£Æ’Â¼Ã£Æ’â€°Ã£ÂÂ¯ 7 Ã¦â€“â€¡Ã¥Â­â€”Ã¤Â»Â¥Ã¤Â¸Å Ã£ÂÂ®Ã©â€¢Â·Ã£Ââ€¢Ã£ÂÂ«Ã£Ââ„¢Ã£â€šâ€¹Ã¥Â¿â€¦Ã¨Â¦ÂÃ£ÂÅ’Ã£Ââ€šÃ£â€šÅ Ã£ÂÂ¾Ã£Ââ„¢&amp;lt;/li&amp;gt;
+               &amp;lt;li&amp;gt;Ã£Æ’â€˜Ã£â€šÂ¹Ã£Æ’Â¯Ã£Æ’Â¼Ã£Æ’â€°Ã£ÂÂ«Ã£ÂÂ¯Ã¨â€¹Â±Ã¦â€¢Â°Ã¥Â­â€”Ã£â€šâ€™Ã¥ÂÂ«Ã£â€šÂÃ£â€šâ€¹Ã¥Â¿â€¦Ã¨Â¦ÂÃ£ÂÅ’Ã£Ââ€šÃ£â€šÅ Ã£ÂÂ¾Ã£Ââ„¢&amp;lt;/li&amp;gt;
+               &amp;lt;li&amp;gt;Ã£Æ’â€˜Ã£â€šÂ¹Ã£Æ’Â¯Ã£Æ’Â¼Ã£Æ’â€°Ã£â€šâ€™Ã¥Â¤â€°Ã¦â€ºÂ´Ã£Ââ„¢Ã£â€šâ€¹Ã¥Â Â´Ã¥ÂË†Ã£â‚¬ÂÃ£ÂÂÃ£â€šÅ’Ã£ÂÂ¾Ã£ÂÂ§Ã£ÂÂ«Ã¤Â½Â¿Ã§â€Â¨Ã£Ââ€”Ã£ÂÅ¸ 4 Ã£ÂÂ¤Ã£ÂÂ®Ã£Æ’â€˜Ã£â€šÂ¹Ã£Æ’Â¯Ã£Æ’Â¼Ã£Æ’â€°Ã£ÂÂ¨Ã¥ÂÅ’Ã£ÂËœÃ£ÂÂ«Ã£Ââ„¢Ã£â€šâ€¹Ã£Ââ€œÃ£ÂÂ¨Ã£ÂÂ¯Ã£ÂÂ§Ã£ÂÂÃ£ÂÂ¾Ã£Ââ€ºÃ£â€šâ€œ&amp;lt;/li&amp;gt;&amp;lt;/ul&amp;gt;</value>
   </data>
   <data name="TEXT_SU_NOTE" xml:space="preserve">
-    <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;注意：&amp;lt;/b&amp;gt;  スーパー ユーザはさらに、マシンごとに ServerAccess の入力内容を変更して暗号化する必要があります。</value>
+    <value>&amp;lt;br /&amp;gt;&amp;lt;br /&amp;gt;&amp;lt;b&amp;gt;Ã¦Â³Â¨Ã¦â€žÂÃ¯Â¼Å¡&amp;lt;/b&amp;gt;  Ã£â€šÂ¹Ã£Æ’Â¼Ã£Æ’â€˜Ã£Æ’Â¼ Ã£Æ’Â¦Ã£Æ’Â¼Ã£â€šÂ¶Ã£ÂÂ¯Ã£Ââ€¢Ã£â€šâ€°Ã£ÂÂ«Ã£â‚¬ÂÃ£Æ’Å¾Ã£â€šÂ·Ã£Æ’Â³Ã£Ââ€Ã£ÂÂ¨Ã£ÂÂ« ServerAccess Ã£ÂÂ®Ã¥â€¦Â¥Ã¥Å â€ºÃ¥â€ â€¦Ã¥Â®Â¹Ã£â€šâ€™Ã¥Â¤â€°Ã¦â€ºÂ´Ã£Ââ€”Ã£ÂÂ¦Ã¦Å¡â€”Ã¥ÂÂ·Ã¥Å’â€“Ã£Ââ„¢Ã£â€šâ€¹Ã¥Â¿â€¦Ã¨Â¦ÂÃ£ÂÅ’Ã£Ââ€šÃ£â€šÅ Ã£ÂÂ¾Ã£Ââ„¢Ã£â‚¬â€š</value>
   </data>
   <data name="lblIncorrectPasswordResource1.Text" xml:space="preserve">
     <value>[JA]Incorrect old password</value>
