--- a/GroupSubscriptions/App_LocalResources/AddEditUDRCValues.aspx.fr.resx
+++ b/GroupSubscriptions/App_LocalResources/AddEditUDRCValues.aspx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -121,43 +121,43 @@
     <value>Date de fin</value>
   </data>
   <data name="ErrorAddUDRCValues" xml:space="preserve">
-    <value>Erreur lors de l’ajout des valeurs UDRC.</value>
+    <value>Erreur lors de lÃ¢â‚¬â„¢ajout des valeurs UDRC.</value>
   </data>
   <data name="ErrorStartEndDates" xml:space="preserve">
-    <value>Entrez des dates de début et de fin valides.</value>
+    <value>Entrez des dates de dÃƒÂ©but et de fin valides.</value>
   </data>
   <data name="ErrorUDRCEndDate" xml:space="preserve">
     <value>Entrez une date de fin valide.</value>
   </data>
   <data name="ErrorUDRCInitStartEndDate" xml:space="preserve">
-    <value>Les valeurs UDRC doivent s’étendre sur l’intégralité de la période couverte par les dates de début et de fin de l’abonnement groupé.</value>
+    <value>Les valeurs UDRC doivent sÃ¢â‚¬â„¢ÃƒÂ©tendre sur lÃ¢â‚¬â„¢intÃƒÂ©gralitÃƒÂ© de la pÃƒÂ©riode couverte par les dates de dÃƒÂ©but et de fin de lÃ¢â‚¬â„¢abonnement groupÃƒÂ©.</value>
   </data>
   <data name="ErrorUDRCStartDate" xml:space="preserve">
-    <value>Entrez une date de début valide.</value>
+    <value>Entrez une date de dÃƒÂ©but valide.</value>
   </data>
   <data name="ErrorUDRCValue" xml:space="preserve">
     <value>Entrez une valeur UDRC valide.</value>
   </data>
   <data name="lblErrorMessageResource1" xml:space="preserve">
-    <value>Messages d’erreur</value>
+    <value>Messages dÃ¢â‚¬â„¢erreur</value>
   </data>
   <data name="lblMinMaxVal" xml:space="preserve">
-    <value>La valeur UDRC doit être comprise entre </value>
+    <value>La valeur UDRC doit ÃƒÂªtre comprise entre </value>
   </data>
   <data name="lblSetUDRCValuesTitleResource1" xml:space="preserve">
-    <value>Définir les valeurs UDRC</value>
+    <value>DÃƒÂ©finir les valeurs UDRC</value>
   </data>
   <data name="Max" xml:space="preserve">
-    <value>Max. :</value>
+    <value>Max.Ã‚Â :</value>
   </data>
   <data name="Message" xml:space="preserve">
     <value> et </value>
   </data>
   <data name="Min" xml:space="preserve">
-    <value>Min. :</value>
+    <value>Min.Ã‚Â :</value>
   </data>
   <data name="StartDate" xml:space="preserve">
-    <value>Date de début</value>
+    <value>Date de dÃƒÂ©but</value>
   </data>
   <data name="UDRCId" xml:space="preserve">
     <value>ID UDRC</value>
@@ -169,6 +169,6 @@
     <value>Configuration des valeurs UDRC</value>
   </data>
   <data name="UDRCValueUnitName" xml:space="preserve">
-    <value>Nom d’affichage de l’unité de valeur UDRC : </value>
+    <value>Nom dÃ¢â‚¬â„¢affichage de lÃ¢â‚¬â„¢unitÃƒÂ© de valeur UDRCÃ‚Â : </value>
   </data>
 </root>
