--- a/GroupSubscriptions/App_LocalResources/SaveGroupSubscription.aspx.fr.resx
+++ b/GroupSubscriptions/App_LocalResources/SaveGroupSubscription.aspx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -118,27 +118,27 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="btnBackToManageResource1.Text" xml:space="preserve">
-    <value>Gérer les abonnements groupés</value>
+    <value>GÃƒÂ©rer les abonnements groupÃƒÂ©s</value>
   </data>
   <data name="btnCancelResource1.Text" xml:space="preserve">
     <value>Retour au tableau de bord</value>
   </data>
   <data name="ErrorSaveGroupSub" xml:space="preserve">
-    <value>Erreur lors de l’enregistrement d’un abonnement groupé.</value>
+    <value>Erreur lors de lÃ¢â‚¬â„¢enregistrement dÃ¢â‚¬â„¢un abonnement groupÃƒÂ©.</value>
   </data>
   <data name="lblCreatedResource1" xml:space="preserve">
-    <value>L’abonnement groupé suivant a été créé avec succès :</value>
+    <value>LÃ¢â‚¬â„¢abonnement groupÃƒÂ© suivant a ÃƒÂ©tÃƒÂ© crÃƒÂ©ÃƒÂ© avec succÃƒÂ¨sÃ‚Â :</value>
   </data>
   <data name="lblDisplayNameResource1.Text" xml:space="preserve">
-    <value>Nom d’affichage</value>
+    <value>Nom dÃ¢â‚¬â„¢affichage</value>
   </data>
   <data name="lblGroupSubscriptionResource1.Text" xml:space="preserve">
-    <value>L’abonnement groupé suivant a été créé avec succès :  </value>
+    <value>LÃ¢â‚¬â„¢abonnement groupÃƒÂ© suivant a ÃƒÂ©tÃƒÂ© crÃƒÂ©ÃƒÂ© avec succÃƒÂ¨sÃ‚Â :  </value>
   </data>
   <data name="lblTitleResource1.Text" xml:space="preserve">
-    <value>Abonnement groupé </value>
+    <value>Abonnement groupÃƒÂ© </value>
   </data>
   <data name="lblUpdatedResource1" xml:space="preserve">
-    <value>L’abonnement groupé suivant a été mis à jour avec succès :</value>
+    <value>LÃ¢â‚¬â„¢abonnement groupÃƒÂ© suivant a ÃƒÂ©tÃƒÂ© mis ÃƒÂ  jour avec succÃƒÂ¨sÃ‚Â :</value>
   </data>
 </root>
