--- a/GroupSubscriptions/App_LocalResources/SetFlatRateRCAccount.aspx.fr.resx
+++ b/GroupSubscriptions/App_LocalResources/SetFlatRateRCAccount.aspx.fr.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -121,30 +121,30 @@
     <value>ID du compte de frais</value>
   </data>
   <data name="EndDate" xml:space="preserve">
-    <value>Date de fin de validité</value>
+    <value>Date de fin de validitÃƒÂ©</value>
   </data>
   <data name="ErrorChargeAcctId" xml:space="preserve">
-    <value>Sélectionnez un compte de frais valide.</value>
+    <value>SÃƒÂ©lectionnez un compte de frais valide.</value>
   </data>
   <data name="ErrorEditFlatRateRCAcct" xml:space="preserve">
-    <value>Erreur lors de la configuration du compte des frais récurrents forfaitaires.</value>
+    <value>Erreur lors de la configuration du compte des frais rÃƒÂ©currents forfaitaires.</value>
   </data>
   <data name="FlatRateRecurringCharge" xml:space="preserve">
-    <value>Frais récurrents forfaitaires</value>
+    <value>Frais rÃƒÂ©currents forfaitaires</value>
   </data>
   <data name="FRRCConfigHeader" xml:space="preserve">
-    <value>Configuration du compte des frais récurrents forfaitaires</value>
+    <value>Configuration du compte des frais rÃƒÂ©currents forfaitaires</value>
   </data>
   <data name="FRRCDisplayName" xml:space="preserve">
-    <value>Nom d’affichage des frais récurrents forfaitaires : </value>
+    <value>Nom dÃ¢â‚¬â„¢affichage des frais rÃƒÂ©currents forfaitairesÃ‚Â : </value>
   </data>
   <data name="lblErrorMessageResource1" xml:space="preserve">
-    <value>Messages d’erreur</value>
+    <value>Messages dÃ¢â‚¬â„¢erreur</value>
   </data>
   <data name="lblSetFRRCAccountTitle" xml:space="preserve">
-    <value>Configuration du compte des frais récurrents forfaitaires</value>
+    <value>Configuration du compte des frais rÃƒÂ©currents forfaitaires</value>
   </data>
   <data name="StartDate" xml:space="preserve">
-    <value>Date de début de validité</value>
+    <value>Date de dÃƒÂ©but de validitÃƒÂ©</value>
   </data>
 </root>
